--- a/apps.json
+++ b/apps.json
@@ -3525,7 +3525,7 @@
     "githubRepo": "aniyomiorg/aniyomi",
     "gitlabRepo": "",
     "gitlabDomain": "",
-    "packageName": "xyz.jmir.tachiyomi.mi",
+    "packageName": "eu.kanade.tachiyomi.aniyomi",
     "category": "Media",
     "platform": "Android",
     "size": "Varies",
@@ -3555,7 +3555,6 @@
     "gitlabDomain": "",
     "packageName": "",
     "releaseKeyword": "",
-    "packageName": "",
     "category": "Utility",
     "platform": "PC",
     "size": "Varies",
@@ -3581,7 +3580,6 @@
     "gitlabDomain": "",
     "packageName": "",
     "releaseKeyword": "",
-    "packageName": "",
     "category": "Utility",
     "platform": "TV",
     "size": "Varies",
