--- a/apps.json
+++ b/apps.json
@@ -3738,6 +3738,7 @@
       "https://ankidroid.org/docs/img/1-decks.png",
       "https://ankidroid.org/docs/img/2-navigation_drawer.png",
       "https://ankidroid.org/docs/img/4-reviewer.png"
-    ]
+    ],
+    "releaseKeyword": "AnkiDroid"
   }
 ]
