--- a/apps.json
+++ b/apps.json
@@ -4238,7 +4238,7 @@
       "https://image2url.com/r2/default/images/1768228411643-d8f7c434-bd83-476b-9cec-f494b7657ce6.png",
       "https://image2url.com/r2/default/images/1768228427119-588bc9f2-8a30-4893-b40d-3684a9bc140e.png"
     ],
-    "releaseKeyword": "universal-revanced-manager "
+    "releaseKeyword": "apk"
   },
   {
     "id": "nuvio",
