--- a/apps.json
+++ b/apps.json
@@ -4598,7 +4598,7 @@
     "downloadUrl": "#",
     "repoUrl": "https://github.com/HydeYYHH/litube",
     "githubRepo": "HydeYYHH/litube",
-    "releaseKeyword": "apk",
+    "releaseKeyword": "app-release.apk",
     "packageName": "com.hhst.litube",
     "category": "Media",
     "platform": "Android",
