--- a/apps.json
+++ b/apps.json
@@ -1180,8 +1180,8 @@
     "latestVersion": "Latest",
     "downloadUrl": "#",
     "repoUrl": "https://github.com/revanced",
-    "githubRepo": "RookieEnough/Revanced-Orion",
-    "releaseKeyword": "tasker-indrastorms",
+    "githubRepo": "RookieEnough/Revanced-AutoBuilds",
+    "releaseKeyword": "tasker",
     "packageName": "net.dinglisch.android.taskerm",
     "category": "Utility",
     "platform": "Android",
