--- a/apps.json
+++ b/apps.json
@@ -86,7 +86,7 @@
     "repoUrl": "https://netmirror.app",
     "githubRepo": "",
     "releaseKeyword": "",
-    "packageName": "app.netmirror.newtv",
+    "packageName": "app.netmirror.netmirrornew",
     "category": "Entertainment",
     "platform": "Android",
     "size": "49.31 MB",
