--- a/apps.json
+++ b/apps.json
@@ -1278,10 +1278,10 @@
     "latestVersion": "Latest",
     "downloadUrl": "#",
     "repoUrl": "https://github.com/revanced",
-    "githubRepo": "RookieEnough/Revanced-Orion",
-    "releaseKeyword": "lightroom",
+    "githubRepo": "RookieEnough/Orion-Data",
+    "releaseKeyword": "com.adobe",
     "packageName": "com.adobe.lrmobile",
-    "category": "Social",
+    "category": "Media",
     "platform": "Android",
     "size": "Varies",
     "author": "Revanced",
