--- a/apps.json
+++ b/apps.json
@@ -1325,7 +1325,7 @@
     "id": "spotify-revanced",
     "name": "Spotify Revanced",
     "description": "Ad-free music listening. Unlimited skips, seek bar enabled, and no forced shuffle. Note: Downloads are server-side and not available.",
-    "icon": "https://www.logo.wine/a/logo/Spotify/Spotify-Icon-Logo.wine.svg",
+    "icon": "https://play-lh.googleusercontent.com/7ynvVIRdhJNAngCg_GI7i8TtH8BqkJYmffeUHsG-mJOdzt1XLvGmbsKuc5Q1SInBjDKN=w240-h480-rw",
     "version": "Latest",
     "latestVersion": "Latest",
     "downloadUrl": "#",
