--- a/apps.json
+++ b/apps.json
@@ -5848,7 +5848,7 @@
     "gitlabRepo": "",
     "gitlabDomain": "",
     "packageName": "io.github.lime3ds.android",
-    "category": "Utility",
+    "category": "Emulator",
     "platform": "Android",
     "size": "Varies",
     "author": "azahar-emu",
