--- a/apps.json
+++ b/apps.json
@@ -141,7 +141,7 @@
     "packageName": "com.anilab.android",
     "category": "Entertainment",
     "platform": "Android",
-    "size": "17.15 MB",
+    "size": "Varies",
     "author": "Anilab Team",
     "screenshots": [
       "https://anilabapk.net/wp-content/uploads/2025/08/Anilab-APK-ScreenShots-3-768x1536.webp",
