--- a/.github/workflows/update_threats.yml
+++ b/.github/workflows/update_threats.yml
@@ -26,35 +26,30 @@ jobs:
 
       - name: Compile Threat Database
         env:
-          # In production, use secrets for paid feeds if any
           GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
           mkdir -p .github/scripts
-          # Ensure threat_compiler.py exists before running
-          if [ -f ".github/scripts/threat_compiler.py" ]; then
-            python .github/scripts/threat_compiler.py
-          else
-            echo "Compiler script not found, creating dummy for demo..."
-            echo 'import json; print("Dummy Compiler"); open("sentinel.json", "w").write("[]")' > dummy.py
-            python dummy.py
-          fi
+          python .github/scripts/threat_compiler.py
 
       - name: Deploy to Ghost Branch (Data)
         run: |
           git config --global user.name "Orion Sentinel"
           git config --global user.email "bot@orion.store"
           
-          # Stash the binary
-          mkdir -p ../temp_sentinel
-          cp sentinel.json ../temp_sentinel/ 2>/dev/null || echo "No Sentinel JSON"
+          # Stash the FOLDER
+          mkdir -p ../temp_sentinel_folder
+          cp -r sentinel ../temp_sentinel_folder/ 2>/dev/null || echo "No Sentinel Folder"
           
           # Switch to data branch
           git fetch origin data:data || git checkout --orphan data
           git checkout data
           
-          # Copy back
-          cp ../temp_sentinel/sentinel.json . 2>/dev/null || :
+          # Nuke old sentinel folder in data branch to avoid stale shards
+          rm -rf sentinel
           
-          git add sentinel.json
+          # Copy back
+          cp -r ../temp_sentinel_folder/sentinel . 2>/dev/null || :
+          
+          git add sentinel/
           git commit -m "Update Threat Intelligence [skip ci]" || echo "No changes"
           git push origin data
