--- a/apps.json
+++ b/apps.json
@@ -7594,7 +7594,7 @@
     "id": "flicky",
     "name": "Flicky",
     "description": " FDroid Client for mainly wide screen / TV friendly. ",
-    "icon": "https://raw.githubusercontent.com/mlm-games/flicky/kotlin/assets/banner.svg",
+    "icon": "https://f-droid.org/repo/app.flicky/en-US/icon_0Hcayr9Y_0c8BO9dwoKVc2kD4MUwzKA4gs41JkMfFjc=.png",
     "version": "Latest",
     "latestVersion": "Latest",
     "downloadUrl": "https://github.com/mlm-games/flicky",
