--- a/apps.json
+++ b/apps.json
@@ -7919,7 +7919,7 @@
     "id": "librepods",
     "name": "Librepods",
     "description": "LibrePods unlocks Apple's exclusive AirPods features on non-Apple devices. Get access to noise control modes, adaptive transparency, ear detection, hearing aid, customized transparency mode, battery status, and more - all the premium features you paid for but Apple locked to their ecosystem.",
-    "icon": "https://raw.githubusercontent.com/kavishdevar/librepods/main/imgs/banner.png",
+    "icon": "https://www.apkmirror.com/wp-content/themes/APKMirror/ap_resize/ap_resize.php?src=https%3A%2F%2Fdownloadr2.apkmirror.com%2Fwp-content%2Fuploads%2F2025%2F06%2FLibrePods_round.png&w=96&h=96&q=100",
     "version": "Latest",
     "latestVersion": "Latest",
     "downloadUrl": "#",
