--- a/apps.json
+++ b/apps.json
@@ -333,7 +333,7 @@
     "downloadUrl": "#",
     "repoUrl": "https://www.myfitnesspal.com/",
     "githubRepo": "RookieEnough/Orion-Data",
-    "releaseKeyword": "myfitnesspa",
+    "releaseKeyword": "myfitnesspal-pro",
     "packageName": "com.myfitnesspal.android",
     "category": "Health",
     "platform": "Android",
