--- a/apps.json
+++ b/apps.json
@@ -136,12 +136,12 @@
     "latestVersion": "1.1.2",
     "downloadUrl": "https://github.com/RookieEnough/Orion-Data/raw/refs/heads/main/APKs/Anilab.apk",
     "repoUrl": "https://anilab.io",
-    "githubRepo": "RookieEnough/Orion-Data",
+    "githubRepo": "",
     "releaseKeyword": "anilab",
     "packageName": "com.anilab.android",
     "category": "Entertainment",
     "platform": "Android",
-    "size": "Varies",
+    "size": "15 MB",
     "author": "Anilab Team",
     "screenshots": [
       "https://anilabapk.net/wp-content/uploads/2025/08/Anilab-APK-ScreenShots-3-768x1536.webp",
