--- a/apps.json
+++ b/apps.json
@@ -8120,7 +8120,8 @@
       "https://raw.githubusercontent.com/Crustack/NotallyX/main/fastlane/metadata/android/en-US/images/phoneScreenshots/6.png",
       "https://raw.githubusercontent.com/Crustack/NotallyX/main/fastlane/metadata/android/en-US/images/phoneScreenshots/7.png",
       "https://raw.githubusercontent.com/Crustack/NotallyX/main/fastlane/metadata/android/en-US/images/phoneScreenshots/8.png"
-    ]
+    ],
+    "releaseKeyword": "apk"
   },
   {
     "id": "com.trudido.app",
