--- a/apps.json
+++ b/apps.json
@@ -8724,7 +8724,7 @@
   {
     "id": "pokecardex",
     "name": "Pokecardex Revanced",
-    "description": "Easily and quickly manage your Pokémon card collection with our app. Our database allows you to browse over 23,000 cards listed in more than 230 series, from the latest to the oldest, including promotional sets.\n\nPatches Applied:\n- Increase scan limit\n- Disable scan counter"
+    "description": "Easily and quickly manage your Pokémon card collection with our app. Our database allows you to browse over 23,000 cards listed in more than 230 series, from the latest to the oldest, including promotional sets.\n\nPatches Applied:\n- Increase scan limit\n- Disable scan counter",
     "icon": "https://play-lh.googleusercontent.com/cBp30ymDIOIbuLkU4z8TSwiaXoLpgVqVM4v8ZnO3j9MTPm306wjbmVp_q5XofDY0_is=w240-h480-rw",
     "version": "Latest",
     "latestVersion": "Latest",
