--- a/apps.json
+++ b/apps.json
@@ -10,7 +10,7 @@
     "repoUrl": "https://github.com/RookieEnough/Revanced-AutoBuilds",
     "githubRepo": "RookieEnough/Revanced-AutoBuilds",
     "releaseKeyword": "youtube-universal",
-    "packageName": "app.revanced.android.youtube",
+    "packageName": "app.morphe.android.youtube",
     "category": "Media",
     "platform": "Android",
     "size": "Varies",
@@ -34,7 +34,7 @@
     "repoUrl": "https://github.com/RookieEnough/Revanced-AutoBuilds",
     "githubRepo": "RookieEnough/Revanced-AutoBuilds",
     "releaseKeyword": "music",
-    "packageName": "app.revanced.android.apps.youtube.music",
+    "packageName": "app.morphe.android.apps.youtube.music",
     "category": "Media",
     "platform": "Android",
     "size": "Varies",
