--- a/config.json
+++ b/config.json
@@ -20,7 +20,7 @@
     "github": "https://github.com/RookieEnough",
     "x": "https://x.com/_Rookie_Z",
     "discord": "https://discord.com/invite/CrM6y4ujnq",
-    "coffee": "https://rookiezz.gumroad.com/l/hrpyb"
+    "coffee": "https://buymeacoffee.com/rookiez"
   },
   "devProfile": {
     "name": "RookieZ",
